<resources>
    <string name="app_name">Questionnaire</string>
    <string name="action_settings">Settings</string>
    <string-array
        name="section_titles">
        <item>PGI</item>
        <item>VAHS</item>
        <item>SF36</item>
        <item>SHAPS-4</item>
        <item>PD NMS</item>
        <item>PDQ20</item>
        <item>LSM</item>
        <item>PAS-A</item>
        <item>PAS-B</item>
        <item>PAS-C</item>
        <item>AS</item>
        <item>PDQ8</item>
        <item>GDS</item>
        <item>Finish</item>
    </string-array>
    <string name="action_view_database">View database</string>
    <string name="action_delete_all">Delete all records</string>
    <string name="action_undo">UNDO</string>
    <string name="action_skip">SKIP</string>
    <string name="text_first_name">First name:</string>
    <string name="text_last_name">Last name:</string>
    <string name="text_hospital_id">Hospital ID:</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="hint_hospital_id">Enter hospital ID</string>
    <string name="button_start">START</string>
    <string name="button_conclude">Click to finish</string>
    <string name="completed">Questionnaire complete!</string>
    <string name="next">NEXT</string>
    <string name="pgi_intro1">Please enter up to 5 areas</string>
    <string name="pgi_area1">Area 1</string>
    <string name="pgi_area2">Area 2</string>
    <string name="pgi_area3">Area 3</string>
    <string name="pgi_area4">Area 4</string>
    <string name="pgi_area5">Area 5</string>
    <string name="gdsTitle">GDS</string>
    <string name="gdsPreamble">Please select yes or no for each question</string>
    <string name="gds1">Are you basically satisfied with your life?</string>
    <string name="gds2">Do you feel that your life is empty?</string>
    <string name="gds3">Do you often get bored?</string>
    <string name="gds4">Are you in good spirits most of the time?</string>
    <string name="gds5">Do you feel happy most of the time?</string>
    <string name="gds6">Do you often feel helpless?</string>
    <string name="gds7">Do you think it is wonderful to be alive now?</string>
    <string name="gds8">Do you feel that your situation is hopeless?</string>
    <string name="pdq20_Title">PDQ20</string>
    <string name="pdq20_Preamble"><![CDATA[The following questions describe several situations in which a person may encounter problems with memory, attention or concentration.  If you are marking your own answers, please check the appropriate response based on your cognitive function <b>during the past 4 weeks</b>.  Please answer every question.  If you are not sure which answer to select, please choose the one answer that comes closest to describing you.]]></string>
    <string name="pdq20_Intro"><![CDATA[<b>During the past 4 weeks</b>, how often did you...]]></string>
    <string name="pdq20_1">Lose your train of thought when speaking?</string>
    <string name="pdq20_2">Have difficulty remembering the names of people, even ones you have met several times?</string>
    <string name="pdq20_3">Forget what you came in for?</string>
    <string name="pdq20_4">Have trouble getting things organized?</string>
    <string name="pdq20_5">Have trouble concentrating on what people are saying during a conversation?</string>
    <string name="pdq20_6">Forget if you had already done something?</string>
    <string name="pdq20_7">Miss appointments and meetings you had scheduled?</string>
    <string name="pdq20_8">Have difficulty planning what to do in the day?</string>
    <string name="pdq20_9">Have trouble concentrating on things like watching a television program or reading a book?</string>
    <string name="pdq20_10">Forget what you did the night before?</string>
    <string name="pdq20_11">Forget the date unless you looked it up?</string>
    <string name="pdq20_12">Have trouble getting started, even if you had a lot of things to do?</string>
    <string name="pdq20_13">Find your mind drifting?</string>
    <string name="pdq20_14">Forget what you talked about after a telephone conversation?</string>
    <string name="pdq20_15">Forget to do things like turn off the stove or turn on your alarm clock?</string>
    <string name="pdq20_16">Feel like your mind went totally blank?</string>
    <string name="pdq20_17">Have trouble holding phone numbers in your head, even for a few seconds?</string>
    <string name="pdq20_18">Forget what you did last weekend?</string>
    <string name="pdq20_19">Forget to take your medication?</string>
    <string name="pdq20_20">Have trouble making decisions?</string>
    <string name="vahsTitle">Visual Analogue Health States</string>
    <string name="vahsPreamble">These questions relate to your recent experience with your health and other symptoms.  Please rate each on a scale from 0 to 10.</string>
    <string name="vahs1">How would you rate your overall health?</string>
    <string name="vahs2">How well are you sleeping?</string>
    <string name="vahs3">How much distress are you experiencing?</string>
    <string name="vahs4">How much pain are you experiencing?</string>
    <string name="vahs5">How much fatigue are you experiencing?</string>
    <string name="vahs6">How much depression are you experiencing?</string>
    <string name="vahs7">How much anxiety are you experiencing?</string>
    <string name="vahs8">How would you rate your overall quality of life?</string>
    <string name="sf36_title">SF36</string>
    <string name="sf36_preamble">The following items are about activities you might do during a typical day.  Does your health now limit you in these activities? If so, how much?</string>
    <string name="sf36_1">Vigorous activities such as running, lifting heavy objects, or participating in strenuous sports</string>
    <string name="sf36_2">Moderate activities such as moving a table, pushing a vacuum cleaner, bowling, or playing golf</string>
    <string name="sf36_3">Lifting or carrying groceries</string>
    <string name="sf36_4">Climbing several flights of stairs</string>
    <string name="sf36_5">Climbing one flight of stairs</string>
    <string name="sf36_6">Bending, kneeling, or stooping</string>
    <string name="sf36_7">Walking more than a kilometre</string>
    <string name="sf36_8">Walking several blocks</string>
    <string name="sf36_9">Walking one block</string>
    <string name="sf36_10">Bathing or dressing yourself</string>
    <string name="nmsTitle">PD NMS Questionnaire</string>
    <string name="nmsPreamble"><![CDATA[A range of problems is listed below.  Please select \'Yes\' if you have experienced it <b>during the past month</b>.  The doctor or nurse may ask you some questions to help decide.  If you have not experienced the problem in the past month, tick the \'No\' box.  You should answer \'No\' even if you have had the problem in the past but not in the past month.]]></string>
    <string name="nmsIntro"><![CDATA[Have you experienced any of the following <b>in the last month</b>?]]></string>
    <string name="nms1">Dribbling of saliva during the daytime</string>
    <string name="nms2">Loss or change in your ability to taste or smell</string>
    <string name="nms3">Difficulty swallowing food or drink or problems with choking</string>
    <string name="nms4">Vomiting or feelings of sickness (nausea)</string>
    <string name="nms5">Constipation = (less than 3 bowel movements a week) or having to strain to pass a stool (faeces)</string>
    <string name="nms6">Bowel (fecal) incontinence</string>
    <string name="nms7">Feeling that your bowel emptying is incomplete after having been to the toilet</string>
    <string name="nms8">A sense of urgency to pass urine makes you rush to the toilet</string>
    <string name="nms9">Getting up regularly at night to pass urine</string>
    <string name="nms10">Unexplained pains (not due to known conditions such as arthritis)</string>
    <string name="nms11">Unexplained change in weight (not due to diet)</string>
    <string name="nms12">Problems remembering things that have happened recently or forgetting to do things</string>
    <string name="nms13">Loss of interest in what is happening around you or doing things</string>
    <string name="nms14">Seeing or hearing things that you know or are told are not there</string>
    <string name="nms15">Difficulty concentrating or staying focused</string>
    <string name="nms16">Feeling sad, low, or blue</string>
    <string name="nms17">Feeling anxious, frightened, or panicky</string>
    <string name="nms18">Feeling less interested in sex or more interested in sex</string>
    <string name="nms19">Finding it difficult to have sex when you try</string>
    <string name="nms20">Feeling light headed, dizzy, or weak standing from sitting or lying</string>
    <string name="nms21">Falling</string>
    <string name="nms22">Finding it difficult to stay awake during activities such as working, driving, or eating</string>
    <string name="nms23">Difficulty getting to sleep at night or staying asleep at night</string>
    <string name="nms24">Intense, vivid dreams or frightening dreams</string>
    <string name="nms25">Talking or moving about in your sleep as if you are acting out a dream</string>
    <string name="nms26">Unpleasant sensations in your legs at night or while resting, and a feeling that you need to move</string>
    <string name="nms27">Swelling of your legs</string>
    <string name="nms28">Excessing sweating</string>
    <string name="nms29">Double vision</string>
    <string name="nms30">Believing things are happening to you that other people say are not true</string>
    <string name="lsmTitle">Life Space Mobility</string>
    <string name="lsmPreamble">Please select the number of days using the slider</string>
    <string name="lsmIntro"><![CDATA[<b>During the past 4 weeks</b>, how many days have you:]]></string>
    <string name="lsm1">been to other rooms in your home besides the room where you sleep?</string>
    <string name="lsm2">been to an area outside your home such as your porch, deck, patio, hallway of an apartment building, or garage?</string>
    <string name="lsm3">been to places in your neighbourhood other than your own yard or apartment building?</string>
    <string name="lsm4">been to places outside your neighbourhood but within your town</string>
    <string name="lsm5">been to places outside your town?</string>
    <string name="pasATitle">Parkinson\'s Anxiety Scale A</string>
    <string name="pasAPreamble"> </string>
    <string name="pasAIntro"><![CDATA[<b>In the past four weeks</b>, to what extent did you experience the following symptoms?]]></string>
    <string name="pasA1">Feeling anxious or nervous</string>
    <string name="pasA2">Feeling tense or stressed</string>
    <string name="pasA3">Being unable to relax</string>
    <string name="pasA4">Excessive worrying about everyday matters</string>
    <string name="pasA5">Fear of something bad, or even the worst, happening</string>
    <string name="pasBTitle">Parkinson\'s Anxiety Scale B</string>
    <string name="pasBPreamble"> </string>
    <string name="pasBIntro"><![CDATA[<b>In the past four weeks</b>, did you experience episodes of the following symptoms?]]></string>
    <string name="a_yes">Yes</string>
    <string name="a_no">No</string>
    <string name="a_never">Never</string>
    <string name="a_rarely">Rarely</string>
    <string name="a_sometimes">Sometimes</string>
    <string name="a_often">Often</string>
    <string name="a_almost_always">Almost always</string>
    <string name="a_neverA">Not at all, or never</string>
    <string name="a_rarelyA">Very mild, or rarely</string>
    <string name="a_sometimesA">Mild, or sometimes</string>
    <string name="a_oftenA">Moderate, or often</string>
    <string name="a_almost_alwaysA">Severe, or (nearly) always</string>
</resources>