<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.abhishek.patientquestionnaire.NewPatientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textViewDefaultStyle"
            android:gravity="start"
            android:text="@string/text_first_name"/>

        <EditText
            android:layout_weight="2"
            android:id="@+id/edit_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textViewDefaultStyle"
            android:hint="@string/hint_first_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textViewDefaultStyle"
            android:gravity="start"
            android:text="@string/text_last_name"/>

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/editTextDefaultStyle"
            android:hint="@string/hint_last_name"  />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textViewDefaultStyle"
            android:gravity="start"
            android:text="@string/text_hospital_id"/>

        <EditText
            android:id="@+id/edit_hospital_id"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/editTextDefaultStyle"
            android:hint="@string/hint_hospital_id" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/button_start"-->
        <!--style="@style/buttonLargeStyle"-->
        <!--android:onClick="buttonCreatePatient"/>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>