<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/cell_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdq20_Intro"
        style="@style/textViewDefaultStyle"
        android:gravity="start"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/cell_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdq20_1"
        style="@style/textViewDefaultStyle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">
        <RadioButton
            android:text="@string/a_neverA"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="@dimen/small_font_size"
            android:onClick="buttonClick"
            android:tag="0"/>

        <RadioButton
            android:text="@string/a_rarelyA"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="@dimen/small_font_size"
            android:onClick="buttonClick"
            android:tag="1"/>

        <RadioButton
            android:text="@string/a_sometimesA"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="@dimen/small_font_size"
            android:onClick="buttonClick"
            android:tag="2"/>

        <RadioButton
            android:text="@string/a_oftenA"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="@dimen/small_font_size"
            android:onClick="buttonClick"
            android:tag="3"/>

        <RadioButton
            android:text="@string/a_almost_alwaysA"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="@dimen/small_font_size"
            android:onClick="buttonClick"
            android:tag="4"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>