<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/cell_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/gdsTitle"
        android:layout_weight="0.2"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal">
    </TextView>

    <TextView
        android:id="@+id/cell_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/gdsPreamble"
        android:layout_weight="0.6"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal">
    </TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/next"
        android:textSize="30sp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="buttonNext"/>


</LinearLayout>