<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:weightSum="1">

    <TextView
        android:id="@+id/cell_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/gds1"
        android:layout_weight="0.5"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/a_yes"
            android:textSize="30sp"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/a_no"
            android:textSize="30sp"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="buttonClick"/>

    </LinearLayout>

</LinearLayout>