<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/cell_subtitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:text="@string/pdqIntro"
        android:textSize="24sp"
        android:gravity="center_vertical|left"/>

    <TextView
        android:id="@+id/cell_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:text="@string/pdq1"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.4"
        android:weightSum="1">
        <RadioButton
            android:text="@string/a_never"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:onClick="buttonClick"/>

        <RadioButton
            android:text="@string/a_rarely"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:onClick="buttonClick"/>

        <RadioButton
            android:text="@string/a_sometimes"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:onClick="buttonClick"/>

        <RadioButton
            android:text="@string/a_often"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:onClick="buttonClick"/>

        <RadioButton
            android:text="@string/a_almost_always"
            android:button="@null"
            android:drawableBottom="@android:drawable/btn_radio"
            android:gravity="center_horizontal|bottom"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:onClick="buttonClick"/>
    </RadioGroup>

</LinearLayout>