<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/cell_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nmsIntro"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/cell_question"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/nms1"
        android:textSize="24sp"
        android:gravity="center_vertical|center_horizontal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/a_yes"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="buttonClick"
            android:background="@drawable/rounded_rectangle_blue"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="20dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/a_no"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="buttonClick"
            android:background="@drawable/rounded_rectangle_blue"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>